--- a/css/ieee.css
+++ b/css/ieee.css
@@ -1,25 +1,51 @@
 .html
 {
-	background-color: #F4ECEC;
+	background-color: #F6F6F6;
 }
 
 #page
 {
 	z-index: 1;
-	width: 643px;
-	min-height: 329.9999999999999px;
+	width: 960px;
+	min-height: 500px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
-	background-color: #F4ECEC;
+	background-color: #F6F6F6;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 108px 53px 62.000000000000114px 264px;
+}
+
+#page_position_content
+{
+	margin-top: -36px;
+	margin-bottom: 62px;
+}
+
+#pu2362
+{
+	width: 0.01px;
+	padding-bottom: 37px;
+	margin-left: 20px;
+	position: relative;
+}
+
+#u2362
+{
+	z-index: 209;
+	width: 957px;
+	height: 37px;
+	border-color: #000000;
+	background-color: #F6F6F6;
+	position: fixed;
+	top: 0px;
+	left: 50%;
+	margin-left: -460px;
 }
 
 #u1918
 {
-	z-index: 2;
+	z-index: 75;
 	width: 957px;
 	height: 37px;
 	top: 0px;
@@ -42,12 +68,49 @@
 	width: 914px;
 }
 
+#u2363
+{
+	z-index: 210;
+	width: 914px;
+	-moz-border-radius: 21px;
+	-webkit-border-radius: 21px;
+	-khtml-border-radius: 21px;
+	border-radius: 21px;
+	-pie-box-shadow: 6px 6px 8px #7F7F7F;
+	-moz-box-shadow: 6px 6px 8px rgba(0, 0, 0, 0.5);
+	-webkit-box-shadow: 6px 6px 8px -1px rgba(0, 0, 0, 0.5);
+	box-shadow: 6px 6px 8px rgba(0, 0, 0, 0.5);
+	position: fixed;
+	top: 33px;
+	left: 50%;
+	margin-left: -450px;
+}
+
+._u2363.f3s_top
+{
+	height: 60px;
+	background-image: url("../images/u1826-full.png");
+	background-position: left top;
+	width: 914px;
+}
+
 #u1919-4
 {
 	z-index: 163;
 	top: 34px;
 	left: 50%;
 	margin-left: -420px;
+}
+
+#u2455-4
+{
+	z-index: 294;
+	display: block;
+	vertical-align: top;
+	position: fixed;
+	top: 34px;
+	left: 50%;
+	margin-left: -419px;
 }
 
 #menuu1827
@@ -135,13 +198,6 @@
 	left: 2px;
 }
 
-#pu1893:hover #u1894-4
-{
-	margin-right: -10000px;
-	top: -1px;
-	left: 2px;
-}
-
 #pu1893:hover #u1893
 {
 	width: 120px;
@@ -179,13 +235,6 @@
 	left: 2px;
 }
 
-#pu1879:hover #u1880-4
-{
-	margin-right: -10000px;
-	top: -6px;
-	left: 2px;
-}
-
 #pu1879:hover #u1879
 {
 	width: 120px;
@@ -218,13 +267,6 @@
 	padding-top: 4px;
 	padding-right: 2px;
 	margin-bottom: -12px;
-	margin-right: -10000px;
-	top: -3px;
-	left: 2px;
-}
-
-#pu1886:hover #u1889-4
-{
 	margin-right: -10000px;
 	top: -3px;
 	left: 2px;
@@ -276,12 +318,6 @@
 	margin: 0px;
 }
 
-#u1874,#u1842
-{
-	width: 120px;
-	top: 34px;
-}
-
 #u1861
 {
 	z-index: 126;
@@ -298,13 +334,6 @@
 	padding-top: 4px;
 	padding-right: 2px;
 	margin-right: -10000px;
-	left: 3px;
-}
-
-#pu1861:hover #u1864-4,#pu1861.MuseMenuActive #u1864-4
-{
-	margin-right: -10000px;
-	top: 0px;
 	left: 3px;
 }
 
@@ -339,13 +368,6 @@
 	left: 3px;
 }
 
-#pu1854:hover #u1856-4,#pu1854.MuseMenuActive #u1856-4
-{
-	margin-right: -10000px;
-	top: -2px;
-	left: 3px;
-}
-
 #pu1854:hover #u1854,#pu1854.MuseMenuActive #u1854
 {
 	width: 120px;
@@ -367,13 +389,6 @@
 	width: 120px;
 }
 
-#pu1893,#pu1879,#pu1886,#pu1861,#pu1854,#pu1847
-{
-	width: 0.01px;
-	position: relative;
-	margin-right: -10000px;
-}
-
 #u1847
 {
 	z-index: 144;
@@ -390,13 +405,6 @@
 	padding-top: 4px;
 	padding-right: 2px;
 	margin-bottom: -12px;
-	margin-right: -10000px;
-	top: -3px;
-	left: 3px;
-}
-
-#pu1847:hover #u1848-4,#pu1847.MuseMenuActive #u1848-4
-{
 	margin-right: -10000px;
 	top: -3px;
 	left: 3px;
@@ -491,9 +499,816 @@
 	top: 8px;
 }
 
+#menuu2364
+{
+	z-index: 211;
+	width: 496px;
+	position: fixed;
+	top: 45px;
+	left: 50%;
+	margin-left: -64px;
+}
+
+#u2448
+{
+	width: 97px;
+	min-height: 34px;
+	position: relative;
+	margin-right: -10000px;
+}
+
+#u2449
+{
+	width: 97px;
+	background-color: transparent;
+	padding-bottom: 17px;
+	position: relative;
+}
+
+#u2449:hover
+{
+	background-color: #999999;
+	margin: 0px;
+}
+
+#u2420
+{
+	width: 97px;
+	min-height: 34px;
+	position: relative;
+	margin-right: -10000px;
+	left: 99px;
+}
+
+#u2421
+{
+	width: 97px;
+	background-color: transparent;
+	padding-bottom: 17px;
+	position: relative;
+}
+
+#u2421:hover
+{
+	background-color: #999999;
+	margin: 0px;
+}
+
+#u2449:active,#u2421:active
+{
+	background-color: #6B6B6B;
+	margin: 0px;
+}
+
+#u2451-4,#u2423-4
+{
+	width: 97px;
+	min-height: 17px;
+	text-align: center;
+	color: #EFEFEF;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	font-weight: bold;
+	position: relative;
+	margin-right: -10000px;
+	top: 8px;
+}
+
+#u2426
+{
+	width: 120px;
+	background-color: #8C8F92;
+	-moz-border-radius: 0px 0px 20px 20px ;
+	-webkit-border-radius: 0px 0px 20px 20px ;
+	-khtml-border-radius: 0px 0px 20px 20px ;
+	border-radius: 0px 0px 20px 20px ;
+	position: relative;
+}
+
+#u2437
+{
+	z-index: 228;
+	width: 120px;
+	height: 39px;
+	position: relative;
+	margin-right: -10000px;
+}
+
+._u2437.f3s_top
+{
+	width: 120px;
+	background-image: url("../images/u1893-sprite.png");
+	overflow: hidden;
+	height: 12px;
+	background-position: left top;
+}
+
+#pu2437:hover ._u2437.f3s_top
+{
+	width: 120px;
+	background-image: url("../images/u1893-r-sprite.png");
+	overflow: hidden;
+	height: 12px;
+	background-position: left top;
+}
+
+._u2437.f3s_mid
+{
+	background-image: url("../images/u1893-sprite.png");
+	overflow: visible;
+	background-position: -120px top;
+	width: 120px;
+	height: 15px;
+}
+
+#pu2437:hover ._u2437.f3s_mid
+{
+	background-image: url("../images/u1893-r-sprite.png");
+	overflow: visible;
+	background-position: -120px top;
+	width: 120px;
+	height: 15px;
+}
+
+._u2437.f3s_bot
+{
+	width: 120px;
+	background-image: url("../images/u1893-sprite.png");
+	overflow: visible;
+	height: 12px;
+	background-position: -240px top;
+}
+
+#pu2437:hover ._u2437.f3s_bot
+{
+	width: 120px;
+	background-image: url("../images/u1893-r-sprite.png");
+	overflow: visible;
+	height: 12px;
+	background-position: -240px top;
+}
+
+#u2439-4
+{
+	width: 112px;
+	min-height: 13px;
+	padding-left: 2px;
+	padding-top: 4px;
+	padding-right: 2px;
+	text-align: center;
+	line-height: 13px;
+	color: #FFFFFF;
+	font-size: 11px;
+	position: relative;
+	margin-bottom: -2px;
+	margin-right: -10000px;
+	top: -1px;
+	left: 2px;
+}
+
+#pu1893:hover #u1894-4,#pu2437:hover #u2439-4
+{
+	margin-right: -10000px;
+	top: -1px;
+	left: 2px;
+}
+
+#pu2437:hover #u2437
+{
+	width: 120px;
+	height: 39px;
+	background: none;
+	-pie-background: none;
+	border-style: none;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 0px;
+	left: 0px;
+	margin-left: 0px;
+}
+
+#u2442
+{
+	z-index: 236;
+	width: 120px;
+	height: 30px;
+	position: relative;
+	margin-right: -10000px;
+}
+
+._u2442.f3s_top
+{
+	width: 120px;
+	background-image: url("../images/u1879-sprite.png");
+	overflow: hidden;
+	height: 12px;
+	background-position: left top;
+}
+
+#pu2442:hover ._u2442.f3s_top
+{
+	width: 120px;
+	background-image: url("../images/u1879-r-sprite.png");
+	overflow: hidden;
+	height: 12px;
+	background-position: left top;
+}
+
+._u2442.f3s_mid
+{
+	background-image: url("../images/u1879-sprite.png");
+	overflow: visible;
+	background-position: -120px top;
+	width: 120px;
+	height: 6px;
+}
+
+#pu2442:hover ._u2442.f3s_mid
+{
+	background-image: url("../images/u1879-r-sprite.png");
+	overflow: visible;
+	background-position: -120px top;
+	width: 120px;
+	height: 6px;
+}
+
+._u2442.f3s_bot
+{
+	width: 120px;
+	background-image: url("../images/u1879-sprite.png");
+	overflow: visible;
+	height: 12px;
+	background-position: -240px top;
+}
+
+#pu2442:hover ._u2442.f3s_bot
+{
+	width: 120px;
+	background-image: url("../images/u1879-r-sprite.png");
+	overflow: visible;
+	height: 12px;
+	background-position: -240px top;
+}
+
+#u2444-4
+{
+	width: 112px;
+	min-height: 13px;
+	padding-left: 2px;
+	padding-top: 4px;
+	padding-right: 2px;
+	text-align: center;
+	line-height: 13px;
+	color: #FFFFFF;
+	font-size: 11px;
+	position: relative;
+	margin-bottom: -11px;
+	margin-right: -10000px;
+	top: -6px;
+	left: 2px;
+}
+
+#pu1879:hover #u1880-4,#pu2442:hover #u2444-4
+{
+	margin-right: -10000px;
+	top: -6px;
+	left: 2px;
+}
+
+#pu2442:hover #u2442
+{
+	width: 120px;
+	height: 30px;
+	background: none;
+	-pie-background: none;
+	border-style: none;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 0px;
+	left: 0px;
+	margin-left: 0px;
+}
+
+#u2430
+{
+	z-index: 244;
+	width: 120px;
+	height: 35px;
+	position: relative;
+	margin-right: -10000px;
+}
+
+._u2430.f3s_top
+{
+	width: 120px;
+	background-image: url("../images/u1886-sprite.png");
+	overflow: hidden;
+	height: 12px;
+	background-position: left top;
+}
+
+#pu2430:hover ._u2430.f3s_top
+{
+	width: 120px;
+	background-image: url("../images/u1886-r-sprite.png");
+	overflow: hidden;
+	height: 12px;
+	background-position: left top;
+}
+
+._u2430.f3s_mid
+{
+	background-image: url("../images/u1886-sprite.png");
+	overflow: visible;
+	background-position: -120px top;
+	width: 120px;
+	height: 5px;
+}
+
+#pu2430:hover ._u2430.f3s_mid
+{
+	background-image: url("../images/u1886-r-sprite.png");
+	overflow: visible;
+	background-position: -120px top;
+	width: 120px;
+	height: 5px;
+}
+
+._u2430.f3s_bot
+{
+	width: 120px;
+	background-image: url("../images/u1886-sprite.png");
+	overflow: visible;
+	height: 18px;
+	background-position: -240px top;
+}
+
+#pu2430:hover ._u2430.f3s_bot
+{
+	width: 120px;
+	background-image: url("../images/u1886-r-sprite.png");
+	overflow: visible;
+	height: 18px;
+	background-position: -240px top;
+}
+
+#u2431-4
+{
+	width: 112px;
+	min-height: 13px;
+	padding-left: 2px;
+	padding-top: 4px;
+	padding-right: 2px;
+	text-align: center;
+	line-height: 13px;
+	color: #FFFFFF;
+	font-size: 11px;
+	position: relative;
+	margin-bottom: -12px;
+	margin-right: -10000px;
+	top: -3px;
+	left: 2px;
+}
+
+#pu1886:hover #u1889-4,#pu2430:hover #u2431-4
+{
+	margin-right: -10000px;
+	top: -3px;
+	left: 2px;
+}
+
+#pu2430:hover #u2430
+{
+	width: 120px;
+	height: 35px;
+	background: none;
+	-pie-background: none;
+	border-style: none;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 0px;
+	left: 0px;
+	margin-left: 0px;
+}
+
+#u2392
+{
+	width: 98px;
+	min-height: 34px;
+	position: relative;
+	margin-right: -10000px;
+	left: 198px;
+}
+
+#u2393
+{
+	width: 98px;
+	background-color: transparent;
+	padding-bottom: 17px;
+	position: relative;
+}
+
+#u2421.MuseMenuActive,#u2393:hover
+{
+	background-color: #999999;
+	margin: 0px;
+}
+
+#u2393:active
+{
+	background-color: #6B6B6B;
+	margin: 0px;
+}
+
+#u1874,#u1842,#u2425,#u2397
+{
+	width: 120px;
+	top: 34px;
+}
+
+#u2407
+{
+	z-index: 260;
+	width: 120px;
+	height: 37px;
+	position: relative;
+	margin-right: -10000px;
+}
+
+._u2407.f3s_top
+{
+	width: 120px;
+	background-image: url("../images/u1861-sprite.png");
+	overflow: hidden;
+	height: 10px;
+	background-position: left top;
+}
+
+._u2407.f3s_mid
+{
+	background-image: url("../images/u1861-sprite.png");
+	overflow: visible;
+	background-position: -120px top;
+	width: 120px;
+	height: 17px;
+}
+
+#pu2407:hover ._u2407.f3s_mid
+{
+	background-image: url("../images/u1861-r-sprite.png");
+	overflow: visible;
+	background-position: -120px top;
+	width: 120px;
+	height: 17px;
+}
+
+._u2407.f3s_bot
+{
+	width: 120px;
+	background-image: url("../images/u1861-sprite.png");
+	overflow: visible;
+	height: 10px;
+	background-position: -240px top;
+}
+
+#u2410-4
+{
+	width: 110px;
+	min-height: 13px;
+	padding-left: 2px;
+	padding-top: 4px;
+	padding-right: 2px;
+	text-align: center;
+	line-height: 13px;
+	color: #FFFFFF;
+	font-size: 11px;
+	position: relative;
+	margin-right: -10000px;
+	left: 3px;
+}
+
+#pu1861:hover #u1864-4,#pu1861.MuseMenuActive #u1864-4,#pu2407:hover #u2410-4
+{
+	margin-right: -10000px;
+	top: 0px;
+	left: 3px;
+}
+
+#pu2407:hover #u2407
+{
+	width: 120px;
+	height: 37px;
+	background: none;
+	-pie-background: none;
+	border-style: none;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 0px;
+	left: 0px;
+	margin-left: 0px;
+}
+
+#u2400
+{
+	z-index: 268;
+	width: 120px;
+	height: 33px;
+	position: relative;
+	margin-right: -10000px;
+}
+
+._u2400.f3s_top
+{
+	width: 120px;
+	background-image: url("../images/u1861-sprite.png");
+	overflow: hidden;
+	height: 10px;
+	background-position: left top;
+}
+
+#pu2407:hover ._u2407.f3s_top,#pu2400:hover ._u2400.f3s_top
+{
+	width: 120px;
+	background-image: url("../images/u1861-r-sprite.png");
+	overflow: hidden;
+	height: 10px;
+	background-position: left top;
+}
+
+._u2400.f3s_mid
+{
+	background-image: url("../images/u1861-sprite.png");
+	overflow: visible;
+	background-position: -120px top;
+	width: 120px;
+	height: 13px;
+}
+
+#pu2400:hover ._u2400.f3s_mid
+{
+	background-image: url("../images/u1861-r-sprite.png");
+	overflow: visible;
+	background-position: -120px top;
+	width: 120px;
+	height: 13px;
+}
+
+._u2400.f3s_bot
+{
+	width: 120px;
+	background-image: url("../images/u1861-sprite.png");
+	overflow: visible;
+	height: 10px;
+	background-position: -240px top;
+}
+
+#pu2407:hover ._u2407.f3s_bot,#pu2400:hover ._u2400.f3s_bot
+{
+	width: 120px;
+	background-image: url("../images/u1861-r-sprite.png");
+	overflow: visible;
+	height: 10px;
+	background-position: -240px top;
+}
+
+#u2401-4
+{
+	width: 110px;
+	min-height: 13px;
+	padding-left: 2px;
+	padding-top: 4px;
+	padding-right: 2px;
+	text-align: center;
+	line-height: 13px;
+	color: #FFFFFF;
+	font-size: 11px;
+	position: relative;
+	margin-bottom: -4px;
+	margin-right: -10000px;
+	top: -2px;
+	left: 3px;
+}
+
+#pu1854:hover #u1856-4,#pu1854.MuseMenuActive #u1856-4,#pu2400:hover #u2401-4
+{
+	margin-right: -10000px;
+	top: -2px;
+	left: 3px;
+}
+
+#pu2400:hover #u2400
+{
+	width: 120px;
+	height: 33px;
+	background: none;
+	-pie-background: none;
+	border-style: none;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 0px;
+	left: 0px;
+	margin-left: 0px;
+}
+
+#u2434,#u2441,#u2427,#u2398,#u2406,#u2399,#u2413
+{
+	width: 120px;
+	position: relative;
+}
+
+#pu1893,#pu1879,#pu1886,#pu1861,#pu1854,#pu1847,#pu2437,#pu2442,#pu2430,#pu2407,#pu2400,#pu2414
+{
+	width: 0.01px;
+	position: relative;
+	margin-right: -10000px;
+}
+
+#u2414
+{
+	z-index: 276;
+	width: 120px;
+	height: 32px;
+	position: relative;
+	margin-right: -10000px;
+}
+
+._u2414.f3s_top
+{
+	width: 120px;
+	background-image: url("../images/u1847-sprite.png");
+	overflow: hidden;
+	height: 10px;
+	background-position: left top;
+}
+
+#pu2414:hover ._u2414.f3s_top
+{
+	width: 120px;
+	background-image: url("../images/u1847-r-sprite.png");
+	overflow: hidden;
+	height: 10px;
+	background-position: left top;
+}
+
+._u2414.f3s_mid
+{
+	background-image: url("../images/u1847-sprite.png");
+	overflow: visible;
+	background-position: -120px top;
+	width: 120px;
+	height: 5px;
+}
+
+#pu2414:hover ._u2414.f3s_mid
+{
+	background-image: url("../images/u1847-r-sprite.png");
+	overflow: visible;
+	background-position: -120px top;
+	width: 120px;
+	height: 5px;
+}
+
+._u2414.f3s_bot
+{
+	width: 120px;
+	background-image: url("../images/u1847-sprite.png");
+	overflow: visible;
+	height: 17px;
+	background-position: -240px top;
+}
+
+#pu2414:hover ._u2414.f3s_bot
+{
+	width: 120px;
+	background-image: url("../images/u1847-r-sprite.png");
+	overflow: visible;
+	height: 17px;
+	background-position: -240px top;
+}
+
+#u2415-4
+{
+	width: 110px;
+	min-height: 13px;
+	padding-left: 2px;
+	padding-top: 4px;
+	padding-right: 2px;
+	text-align: center;
+	line-height: 13px;
+	color: #FFFFFF;
+	font-size: 11px;
+	position: relative;
+	margin-bottom: -12px;
+	margin-right: -10000px;
+	top: -3px;
+	left: 3px;
+}
+
+#pu1847:hover #u1848-4,#pu1847.MuseMenuActive #u1848-4,#pu2414:hover #u2415-4
+{
+	margin-right: -10000px;
+	top: -3px;
+	left: 3px;
+}
+
+#pu2414:hover #u2414
+{
+	width: 120px;
+	height: 32px;
+	background: none;
+	-pie-background: none;
+	border-style: none;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 0px;
+	left: 0px;
+	margin-left: 0px;
+}
+
+#u2365
+{
+	width: 98px;
+	min-height: 34px;
+	position: relative;
+	margin-right: -10000px;
+	left: 298px;
+}
+
+#u2366
+{
+	width: 98px;
+	background-color: transparent;
+	padding-bottom: 17px;
+	position: relative;
+}
+
+#u2393.MuseMenuActive,#u2366:hover
+{
+	background-color: #999999;
+	margin: 0px;
+}
+
+#u2366:active
+{
+	background-color: #6B6B6B;
+	margin: 0px;
+}
+
+#u2385
+{
+	width: 98px;
+	min-height: 34px;
+	position: relative;
+	margin-right: -10000px;
+	left: 398px;
+}
+
+#u2388
+{
+	width: 98px;
+	background-color: transparent;
+	padding-bottom: 17px;
+	position: relative;
+}
+
+#u2366.MuseMenuActive,#u2388:hover
+{
+	background-color: #999999;
+	margin: 0px;
+}
+
+#u2388:active
+{
+	background-color: #6B6B6B;
+	margin: 0px;
+}
+
+#u2388.MuseMenuActive
+{
+	background-color: #999999;
+	margin: 0px;
+}
+
+#u2394-4,#u2368-4,#u2390-4
+{
+	width: 98px;
+	min-height: 17px;
+	text-align: center;
+	color: #EFEFEF;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	font-weight: bold;
+	position: relative;
+	margin-right: -10000px;
+	top: 8px;
+}
+
+.MenuItem /* unifiedNavBar */
+{
+	cursor: pointer;
+}
+
 #menuu1761
 {
-	z-index: 3;
+	z-index: 2;
 	width: 197px;
 	top: 110px;
 	left: 50%;
@@ -797,6 +1612,8 @@
 	min-height: 41px;
 	line-height: 29px;
 	font-size: 24px;
+	margin-left: 264px;
+	margin-top: 107px;
 	position: relative;
 }
 
@@ -805,7 +1622,7 @@
 	z-index: 171;
 	width: 587px;
 	min-height: 352px;
-	margin-left: 56px;
+	margin-left: 320px;
 	margin-top: 16px;
 	position: relative;
 }
