--- a/css/robotics.css
+++ b/css/robotics.css
@@ -1,25 +1,51 @@
 .html
 {
-	background-color: #F4ECEC;
+	background-color: #F6F6F6;
 }
 
 #page
 {
 	z-index: 1;
-	width: 646px;
-	min-height: 324px;
+	width: 960px;
+	min-height: 500px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
-	background-color: #F4ECEC;
+	background-color: #F6F6F6;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 114px 53px 62px 261px;
+}
+
+#page_position_content
+{
+	margin-top: -36px;
+	margin-bottom: 62px;
+}
+
+#pu2268
+{
+	width: 0.01px;
+	padding-bottom: 37px;
+	margin-left: 20px;
+	position: relative;
+}
+
+#u2268
+{
+	z-index: 231;
+	width: 957px;
+	height: 37px;
+	border-color: #000000;
+	background-color: #F6F6F6;
+	position: fixed;
+	top: 0px;
+	left: 50%;
+	margin-left: -460px;
 }
 
 #u1918
 {
-	z-index: 2;
+	z-index: 75;
 	width: 957px;
 	height: 37px;
 	top: 0px;
@@ -42,12 +68,49 @@
 	width: 914px;
 }
 
+#u2269
+{
+	z-index: 232;
+	width: 914px;
+	-moz-border-radius: 21px;
+	-webkit-border-radius: 21px;
+	-khtml-border-radius: 21px;
+	border-radius: 21px;
+	-pie-box-shadow: 6px 6px 8px #7F7F7F;
+	-moz-box-shadow: 6px 6px 8px rgba(0, 0, 0, 0.5);
+	-webkit-box-shadow: 6px 6px 8px -1px rgba(0, 0, 0, 0.5);
+	box-shadow: 6px 6px 8px rgba(0, 0, 0, 0.5);
+	position: fixed;
+	top: 33px;
+	left: 50%;
+	margin-left: -450px;
+}
+
+._u2269.f3s_top
+{
+	height: 60px;
+	background-image: url("../images/u1826-full.png");
+	background-position: left top;
+	width: 914px;
+}
+
 #u1919-4
 {
 	z-index: 163;
 	top: 34px;
 	left: 50%;
 	margin-left: -420px;
+}
+
+#u2361-4
+{
+	z-index: 316;
+	display: block;
+	vertical-align: top;
+	position: fixed;
+	top: 34px;
+	left: 50%;
+	margin-left: -419px;
 }
 
 #menuu1827
@@ -135,13 +198,6 @@
 	left: 2px;
 }
 
-#pu1893:hover #u1894-4
-{
-	margin-right: -10000px;
-	top: -1px;
-	left: 2px;
-}
-
 #pu1893:hover #u1893
 {
 	width: 120px;
@@ -179,13 +235,6 @@
 	left: 2px;
 }
 
-#pu1879:hover #u1880-4
-{
-	margin-right: -10000px;
-	top: -6px;
-	left: 2px;
-}
-
 #pu1879:hover #u1879
 {
 	width: 120px;
@@ -218,13 +267,6 @@
 	padding-top: 4px;
 	padding-right: 2px;
 	margin-bottom: -12px;
-	margin-right: -10000px;
-	top: -3px;
-	left: 2px;
-}
-
-#pu1886:hover #u1889-4
-{
 	margin-right: -10000px;
 	top: -3px;
 	left: 2px;
@@ -276,12 +318,6 @@
 	margin: 0px;
 }
 
-#u1874,#u1842
-{
-	width: 120px;
-	top: 34px;
-}
-
 #u1861
 {
 	z-index: 126;
@@ -298,13 +334,6 @@
 	padding-top: 4px;
 	padding-right: 2px;
 	margin-right: -10000px;
-	left: 3px;
-}
-
-#pu1861:hover #u1864-4,#pu1861.MuseMenuActive #u1864-4
-{
-	margin-right: -10000px;
-	top: 0px;
 	left: 3px;
 }
 
@@ -339,13 +368,6 @@
 	left: 3px;
 }
 
-#pu1854:hover #u1856-4,#pu1854.MuseMenuActive #u1856-4
-{
-	margin-right: -10000px;
-	top: -2px;
-	left: 3px;
-}
-
 #pu1854:hover #u1854,#pu1854.MuseMenuActive #u1854
 {
 	width: 120px;
@@ -367,13 +389,6 @@
 	width: 120px;
 }
 
-#pu1893,#pu1879,#pu1886,#pu1861,#pu1854,#pu1847
-{
-	width: 0.01px;
-	position: relative;
-	margin-right: -10000px;
-}
-
 #u1847
 {
 	z-index: 144;
@@ -390,13 +405,6 @@
 	padding-top: 4px;
 	padding-right: 2px;
 	margin-bottom: -12px;
-	margin-right: -10000px;
-	top: -3px;
-	left: 3px;
-}
-
-#pu1847:hover #u1848-4,#pu1847.MuseMenuActive #u1848-4
-{
 	margin-right: -10000px;
 	top: -3px;
 	left: 3px;
@@ -491,9 +499,816 @@
 	top: 8px;
 }
 
+#menuu2270
+{
+	z-index: 233;
+	width: 496px;
+	position: fixed;
+	top: 45px;
+	left: 50%;
+	margin-left: -64px;
+}
+
+#u2354
+{
+	width: 97px;
+	min-height: 34px;
+	position: relative;
+	margin-right: -10000px;
+}
+
+#u2355
+{
+	width: 97px;
+	background-color: transparent;
+	padding-bottom: 17px;
+	position: relative;
+}
+
+#u2355:hover
+{
+	background-color: #999999;
+	margin: 0px;
+}
+
+#u2326
+{
+	width: 97px;
+	min-height: 34px;
+	position: relative;
+	margin-right: -10000px;
+	left: 99px;
+}
+
+#u2327
+{
+	width: 97px;
+	background-color: transparent;
+	padding-bottom: 17px;
+	position: relative;
+}
+
+#u2327:hover
+{
+	background-color: #999999;
+	margin: 0px;
+}
+
+#u2355:active,#u2327:active
+{
+	background-color: #6B6B6B;
+	margin: 0px;
+}
+
+#u2357-4,#u2329-4
+{
+	width: 97px;
+	min-height: 17px;
+	text-align: center;
+	color: #EFEFEF;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	font-weight: bold;
+	position: relative;
+	margin-right: -10000px;
+	top: 8px;
+}
+
+#u2332
+{
+	width: 120px;
+	background-color: #8C8F92;
+	-moz-border-radius: 0px 0px 20px 20px ;
+	-webkit-border-radius: 0px 0px 20px 20px ;
+	-khtml-border-radius: 0px 0px 20px 20px ;
+	border-radius: 0px 0px 20px 20px ;
+	position: relative;
+}
+
+#u2343
+{
+	z-index: 250;
+	width: 120px;
+	height: 39px;
+	position: relative;
+	margin-right: -10000px;
+}
+
+._u2343.f3s_top
+{
+	width: 120px;
+	background-image: url("../images/u1893-sprite.png");
+	overflow: hidden;
+	height: 12px;
+	background-position: left top;
+}
+
+#pu2343:hover ._u2343.f3s_top
+{
+	width: 120px;
+	background-image: url("../images/u1893-r-sprite.png");
+	overflow: hidden;
+	height: 12px;
+	background-position: left top;
+}
+
+._u2343.f3s_mid
+{
+	background-image: url("../images/u1893-sprite.png");
+	overflow: visible;
+	background-position: -120px top;
+	width: 120px;
+	height: 15px;
+}
+
+#pu2343:hover ._u2343.f3s_mid
+{
+	background-image: url("../images/u1893-r-sprite.png");
+	overflow: visible;
+	background-position: -120px top;
+	width: 120px;
+	height: 15px;
+}
+
+._u2343.f3s_bot
+{
+	width: 120px;
+	background-image: url("../images/u1893-sprite.png");
+	overflow: visible;
+	height: 12px;
+	background-position: -240px top;
+}
+
+#pu2343:hover ._u2343.f3s_bot
+{
+	width: 120px;
+	background-image: url("../images/u1893-r-sprite.png");
+	overflow: visible;
+	height: 12px;
+	background-position: -240px top;
+}
+
+#u2345-4
+{
+	width: 112px;
+	min-height: 13px;
+	padding-left: 2px;
+	padding-top: 4px;
+	padding-right: 2px;
+	text-align: center;
+	line-height: 13px;
+	color: #FFFFFF;
+	font-size: 11px;
+	position: relative;
+	margin-bottom: -2px;
+	margin-right: -10000px;
+	top: -1px;
+	left: 2px;
+}
+
+#pu1893:hover #u1894-4,#pu2343:hover #u2345-4
+{
+	margin-right: -10000px;
+	top: -1px;
+	left: 2px;
+}
+
+#pu2343:hover #u2343
+{
+	width: 120px;
+	height: 39px;
+	background: none;
+	-pie-background: none;
+	border-style: none;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 0px;
+	left: 0px;
+	margin-left: 0px;
+}
+
+#u2348
+{
+	z-index: 258;
+	width: 120px;
+	height: 30px;
+	position: relative;
+	margin-right: -10000px;
+}
+
+._u2348.f3s_top
+{
+	width: 120px;
+	background-image: url("../images/u1879-sprite.png");
+	overflow: hidden;
+	height: 12px;
+	background-position: left top;
+}
+
+#pu2348:hover ._u2348.f3s_top
+{
+	width: 120px;
+	background-image: url("../images/u1879-r-sprite.png");
+	overflow: hidden;
+	height: 12px;
+	background-position: left top;
+}
+
+._u2348.f3s_mid
+{
+	background-image: url("../images/u1879-sprite.png");
+	overflow: visible;
+	background-position: -120px top;
+	width: 120px;
+	height: 6px;
+}
+
+#pu2348:hover ._u2348.f3s_mid
+{
+	background-image: url("../images/u1879-r-sprite.png");
+	overflow: visible;
+	background-position: -120px top;
+	width: 120px;
+	height: 6px;
+}
+
+._u2348.f3s_bot
+{
+	width: 120px;
+	background-image: url("../images/u1879-sprite.png");
+	overflow: visible;
+	height: 12px;
+	background-position: -240px top;
+}
+
+#pu2348:hover ._u2348.f3s_bot
+{
+	width: 120px;
+	background-image: url("../images/u1879-r-sprite.png");
+	overflow: visible;
+	height: 12px;
+	background-position: -240px top;
+}
+
+#u2350-4
+{
+	width: 112px;
+	min-height: 13px;
+	padding-left: 2px;
+	padding-top: 4px;
+	padding-right: 2px;
+	text-align: center;
+	line-height: 13px;
+	color: #FFFFFF;
+	font-size: 11px;
+	position: relative;
+	margin-bottom: -11px;
+	margin-right: -10000px;
+	top: -6px;
+	left: 2px;
+}
+
+#pu1879:hover #u1880-4,#pu2348:hover #u2350-4
+{
+	margin-right: -10000px;
+	top: -6px;
+	left: 2px;
+}
+
+#pu2348:hover #u2348
+{
+	width: 120px;
+	height: 30px;
+	background: none;
+	-pie-background: none;
+	border-style: none;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 0px;
+	left: 0px;
+	margin-left: 0px;
+}
+
+#u2336
+{
+	z-index: 266;
+	width: 120px;
+	height: 35px;
+	position: relative;
+	margin-right: -10000px;
+}
+
+._u2336.f3s_top
+{
+	width: 120px;
+	background-image: url("../images/u1886-sprite.png");
+	overflow: hidden;
+	height: 12px;
+	background-position: left top;
+}
+
+#pu2336:hover ._u2336.f3s_top
+{
+	width: 120px;
+	background-image: url("../images/u1886-r-sprite.png");
+	overflow: hidden;
+	height: 12px;
+	background-position: left top;
+}
+
+._u2336.f3s_mid
+{
+	background-image: url("../images/u1886-sprite.png");
+	overflow: visible;
+	background-position: -120px top;
+	width: 120px;
+	height: 5px;
+}
+
+#pu2336:hover ._u2336.f3s_mid
+{
+	background-image: url("../images/u1886-r-sprite.png");
+	overflow: visible;
+	background-position: -120px top;
+	width: 120px;
+	height: 5px;
+}
+
+._u2336.f3s_bot
+{
+	width: 120px;
+	background-image: url("../images/u1886-sprite.png");
+	overflow: visible;
+	height: 18px;
+	background-position: -240px top;
+}
+
+#pu2336:hover ._u2336.f3s_bot
+{
+	width: 120px;
+	background-image: url("../images/u1886-r-sprite.png");
+	overflow: visible;
+	height: 18px;
+	background-position: -240px top;
+}
+
+#u2337-4
+{
+	width: 112px;
+	min-height: 13px;
+	padding-left: 2px;
+	padding-top: 4px;
+	padding-right: 2px;
+	text-align: center;
+	line-height: 13px;
+	color: #FFFFFF;
+	font-size: 11px;
+	position: relative;
+	margin-bottom: -12px;
+	margin-right: -10000px;
+	top: -3px;
+	left: 2px;
+}
+
+#pu1886:hover #u1889-4,#pu2336:hover #u2337-4
+{
+	margin-right: -10000px;
+	top: -3px;
+	left: 2px;
+}
+
+#pu2336:hover #u2336
+{
+	width: 120px;
+	height: 35px;
+	background: none;
+	-pie-background: none;
+	border-style: none;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 0px;
+	left: 0px;
+	margin-left: 0px;
+}
+
+#u2298
+{
+	width: 98px;
+	min-height: 34px;
+	position: relative;
+	margin-right: -10000px;
+	left: 198px;
+}
+
+#u2299
+{
+	width: 98px;
+	background-color: transparent;
+	padding-bottom: 17px;
+	position: relative;
+}
+
+#u2327.MuseMenuActive,#u2299:hover
+{
+	background-color: #999999;
+	margin: 0px;
+}
+
+#u2299:active
+{
+	background-color: #6B6B6B;
+	margin: 0px;
+}
+
+#u1874,#u1842,#u2331,#u2303
+{
+	width: 120px;
+	top: 34px;
+}
+
+#u2313
+{
+	z-index: 282;
+	width: 120px;
+	height: 37px;
+	position: relative;
+	margin-right: -10000px;
+}
+
+._u2313.f3s_top
+{
+	width: 120px;
+	background-image: url("../images/u1861-sprite.png");
+	overflow: hidden;
+	height: 10px;
+	background-position: left top;
+}
+
+._u2313.f3s_mid
+{
+	background-image: url("../images/u1861-sprite.png");
+	overflow: visible;
+	background-position: -120px top;
+	width: 120px;
+	height: 17px;
+}
+
+#pu2313:hover ._u2313.f3s_mid
+{
+	background-image: url("../images/u1861-r-sprite.png");
+	overflow: visible;
+	background-position: -120px top;
+	width: 120px;
+	height: 17px;
+}
+
+._u2313.f3s_bot
+{
+	width: 120px;
+	background-image: url("../images/u1861-sprite.png");
+	overflow: visible;
+	height: 10px;
+	background-position: -240px top;
+}
+
+#u2316-4
+{
+	width: 110px;
+	min-height: 13px;
+	padding-left: 2px;
+	padding-top: 4px;
+	padding-right: 2px;
+	text-align: center;
+	line-height: 13px;
+	color: #FFFFFF;
+	font-size: 11px;
+	position: relative;
+	margin-right: -10000px;
+	left: 3px;
+}
+
+#pu1861:hover #u1864-4,#pu1861.MuseMenuActive #u1864-4,#pu2313:hover #u2316-4
+{
+	margin-right: -10000px;
+	top: 0px;
+	left: 3px;
+}
+
+#pu2313:hover #u2313
+{
+	width: 120px;
+	height: 37px;
+	background: none;
+	-pie-background: none;
+	border-style: none;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 0px;
+	left: 0px;
+	margin-left: 0px;
+}
+
+#u2306
+{
+	z-index: 290;
+	width: 120px;
+	height: 33px;
+	position: relative;
+	margin-right: -10000px;
+}
+
+._u2306.f3s_top
+{
+	width: 120px;
+	background-image: url("../images/u1861-sprite.png");
+	overflow: hidden;
+	height: 10px;
+	background-position: left top;
+}
+
+#pu2313:hover ._u2313.f3s_top,#pu2306:hover ._u2306.f3s_top
+{
+	width: 120px;
+	background-image: url("../images/u1861-r-sprite.png");
+	overflow: hidden;
+	height: 10px;
+	background-position: left top;
+}
+
+._u2306.f3s_mid
+{
+	background-image: url("../images/u1861-sprite.png");
+	overflow: visible;
+	background-position: -120px top;
+	width: 120px;
+	height: 13px;
+}
+
+#pu2306:hover ._u2306.f3s_mid
+{
+	background-image: url("../images/u1861-r-sprite.png");
+	overflow: visible;
+	background-position: -120px top;
+	width: 120px;
+	height: 13px;
+}
+
+._u2306.f3s_bot
+{
+	width: 120px;
+	background-image: url("../images/u1861-sprite.png");
+	overflow: visible;
+	height: 10px;
+	background-position: -240px top;
+}
+
+#pu2313:hover ._u2313.f3s_bot,#pu2306:hover ._u2306.f3s_bot
+{
+	width: 120px;
+	background-image: url("../images/u1861-r-sprite.png");
+	overflow: visible;
+	height: 10px;
+	background-position: -240px top;
+}
+
+#u2307-4
+{
+	width: 110px;
+	min-height: 13px;
+	padding-left: 2px;
+	padding-top: 4px;
+	padding-right: 2px;
+	text-align: center;
+	line-height: 13px;
+	color: #FFFFFF;
+	font-size: 11px;
+	position: relative;
+	margin-bottom: -4px;
+	margin-right: -10000px;
+	top: -2px;
+	left: 3px;
+}
+
+#pu1854:hover #u1856-4,#pu1854.MuseMenuActive #u1856-4,#pu2306:hover #u2307-4
+{
+	margin-right: -10000px;
+	top: -2px;
+	left: 3px;
+}
+
+#pu2306:hover #u2306
+{
+	width: 120px;
+	height: 33px;
+	background: none;
+	-pie-background: none;
+	border-style: none;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 0px;
+	left: 0px;
+	margin-left: 0px;
+}
+
+#u2340,#u2347,#u2333,#u2304,#u2312,#u2305,#u2319
+{
+	width: 120px;
+	position: relative;
+}
+
+#pu1893,#pu1879,#pu1886,#pu1861,#pu1854,#pu1847,#pu2343,#pu2348,#pu2336,#pu2313,#pu2306,#pu2320
+{
+	width: 0.01px;
+	position: relative;
+	margin-right: -10000px;
+}
+
+#u2320
+{
+	z-index: 298;
+	width: 120px;
+	height: 32px;
+	position: relative;
+	margin-right: -10000px;
+}
+
+._u2320.f3s_top
+{
+	width: 120px;
+	background-image: url("../images/u1847-sprite.png");
+	overflow: hidden;
+	height: 10px;
+	background-position: left top;
+}
+
+#pu2320:hover ._u2320.f3s_top
+{
+	width: 120px;
+	background-image: url("../images/u1847-r-sprite.png");
+	overflow: hidden;
+	height: 10px;
+	background-position: left top;
+}
+
+._u2320.f3s_mid
+{
+	background-image: url("../images/u1847-sprite.png");
+	overflow: visible;
+	background-position: -120px top;
+	width: 120px;
+	height: 5px;
+}
+
+#pu2320:hover ._u2320.f3s_mid
+{
+	background-image: url("../images/u1847-r-sprite.png");
+	overflow: visible;
+	background-position: -120px top;
+	width: 120px;
+	height: 5px;
+}
+
+._u2320.f3s_bot
+{
+	width: 120px;
+	background-image: url("../images/u1847-sprite.png");
+	overflow: visible;
+	height: 17px;
+	background-position: -240px top;
+}
+
+#pu2320:hover ._u2320.f3s_bot
+{
+	width: 120px;
+	background-image: url("../images/u1847-r-sprite.png");
+	overflow: visible;
+	height: 17px;
+	background-position: -240px top;
+}
+
+#u2321-4
+{
+	width: 110px;
+	min-height: 13px;
+	padding-left: 2px;
+	padding-top: 4px;
+	padding-right: 2px;
+	text-align: center;
+	line-height: 13px;
+	color: #FFFFFF;
+	font-size: 11px;
+	position: relative;
+	margin-bottom: -12px;
+	margin-right: -10000px;
+	top: -3px;
+	left: 3px;
+}
+
+#pu1847:hover #u1848-4,#pu1847.MuseMenuActive #u1848-4,#pu2320:hover #u2321-4
+{
+	margin-right: -10000px;
+	top: -3px;
+	left: 3px;
+}
+
+#pu2320:hover #u2320
+{
+	width: 120px;
+	height: 32px;
+	background: none;
+	-pie-background: none;
+	border-style: none;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 0px;
+	left: 0px;
+	margin-left: 0px;
+}
+
+#u2271
+{
+	width: 98px;
+	min-height: 34px;
+	position: relative;
+	margin-right: -10000px;
+	left: 298px;
+}
+
+#u2272
+{
+	width: 98px;
+	background-color: transparent;
+	padding-bottom: 17px;
+	position: relative;
+}
+
+#u2299.MuseMenuActive,#u2272:hover
+{
+	background-color: #999999;
+	margin: 0px;
+}
+
+#u2272:active
+{
+	background-color: #6B6B6B;
+	margin: 0px;
+}
+
+#u2291
+{
+	width: 98px;
+	min-height: 34px;
+	position: relative;
+	margin-right: -10000px;
+	left: 398px;
+}
+
+#u2294
+{
+	width: 98px;
+	background-color: transparent;
+	padding-bottom: 17px;
+	position: relative;
+}
+
+#u2272.MuseMenuActive,#u2294:hover
+{
+	background-color: #999999;
+	margin: 0px;
+}
+
+#u2294:active
+{
+	background-color: #6B6B6B;
+	margin: 0px;
+}
+
+#u2294.MuseMenuActive
+{
+	background-color: #999999;
+	margin: 0px;
+}
+
+#u2300-4,#u2274-4,#u2296-4
+{
+	width: 98px;
+	min-height: 17px;
+	text-align: center;
+	color: #EFEFEF;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	font-weight: bold;
+	position: relative;
+	margin-right: -10000px;
+	top: 8px;
+}
+
+.MenuItem /* unifiedNavBar */
+{
+	cursor: pointer;
+}
+
 #menuu1761
 {
-	z-index: 3;
+	z-index: 2;
 	width: 197px;
 	top: 110px;
 	left: 50%;
@@ -797,6 +1612,8 @@
 	min-height: 31px;
 	line-height: 29px;
 	font-size: 24px;
+	margin-left: 261px;
+	margin-top: 113px;
 	position: relative;
 }
 
@@ -805,7 +1622,7 @@
 	z-index: 171;
 	width: 637px;
 	min-height: 241px;
-	margin-left: 9px;
+	margin-left: 270px;
 	margin-top: 23px;
 	position: relative;
 }
